# MinimalTask

./: CLAUDE.md  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json
scripts/: install-local.sh  release.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src/components/: AddTaskInput.tsx  DevFooter.tsx  DoneGroups.tsx  Sidebar.tsx  TagFilter.tsx  TaskDetails.tsx  TaskListView.tsx  TaskRow.tsx
src/db/: client.ts  index.ts  seed.ts  sessions.ts  tasks.ts  types.ts
src/lib/: links.ts  parseInput.ts  tags.ts  tray.ts  useTimer.ts
