[package]
name = "minimaltask"
version = "0.1.0"
description = "Local-first desktop task timer."
edition = "2021"
license = "MIT"

[lib]
name = "minimaltask_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2.3.1"

